[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/UI/menu-principal.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/bouton_play.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/bouton_quit.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/bouton_credits.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/bouton_howto.png" type="Texture" id=5]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/voice/Intro.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/music/menu theme woodoo.wav" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.833839, 0.833839 )
texture = ExtResource( 1 )
centered = false

[node name="Play" type="TextureButton" parent="."]
margin_left = 645.0
margin_top = 480.0
margin_right = 953.0
margin_bottom = 636.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 695.0
margin_top = 660.0
margin_right = 901.0
margin_bottom = 754.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 1095.0
margin_top = 495.0
margin_right = 1412.0
margin_bottom = 612.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="TextureButton" parent="."]
margin_left = 210.0
margin_top = 500.0
margin_right = 514.0
margin_bottom = 618.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.049
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.117
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
